--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,3 +36,39 @@ en:
   inc_all_rights_reserved: "Inc. All rights reserved."
   year: "© 2016"
   sub: "-"
+  log_in: "Log in"
+  log_out: "Log out"
+  sign_in_with_facebook: "Sign in with Facebook"
+  sign_in_with_twitter: "Sign in with Twitter"
+  sign_in_with_google_plus: "Sign in with Google Plus"
+  characters_minimum: "characters minimum"
+  open_parenthesis: "("
+  close_parenthesis: ")"
+  edit: "Edit"
+  update: "Update"
+  currently_waiting_confirmation_for: "Currently waiting confirmation for:"
+  leave_blank_if_you_do_not_want_to_change_it: "leave blank if you don't want to change it"
+  we_need_your_current_password_to_confirm_your_changes: "we need your current password to confirm your changes"
+  cancel_my_account: "Cancel my account"
+  female: "Female"
+  male: "Male"
+  other: "Other"
+  example_date: "(mm/dd/yyyy)"
+  date:
+    formats:
+      default: "%m/%d/%Y"
+  forgot_your_password: "Forgot your password?"
+  send_me_reset_password_instructions: "Send me reset password instructions"
+  new_password: "New password"
+  Resend_confirmation_instructions: "Resend confirmation instructions"
+  welcome: "Welcome"
+  you_can_confirm_your_account_email_through_the_link_below: "You can confirm your account email through the link below:"
+  hello: "Hello"
+  notify_changed_password: "We're contacting you to notify you that your password has been changed."
+  requested_link_to_change_your_password: "Someone has requested a link to change your password.You can do this through the link below"
+  request_error: "If you didn't request this, please ignore this email."
+  your_password_will_not_change_until_you_access_the_link_above: "Your password won't change until you access the link above."
+  your_account_has_been_locked_due_to_an_excessive_number_of_unsuccessful_sign_in_attempts: "Your account has been locked due to an excessive number of unsuccessful sign in attempts."
+  click_the_link_below_to_unlock_your_account: "Click the link below to unlock your account:"
+  setting: "settings"
+  profile: "profile"
