--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -72,3 +72,21 @@ en:
   click_the_link_below_to_unlock_your_account: "Click the link below to unlock your account:"
   setting: "settings"
   profile: "profile"
+  id_not_exist: "Id not exist"
+  delete_not_success: "delete not success"
+  index: "Index"
+  name: "Name"
+  email: "Email"
+  role: "Role"
+  gender: "Gender"
+  birthday: "Birthday"
+  action: "Action"
+  create: "Created"
+  show: "Show"
+  delete: "Delete"
+  edit_user: "Edit user"
+  new_user: "New user"
+  are_you_sure: "Are you sure ?"
+  the_form_contains: "The form contains"
+  error: "error"
+  list_user: "List user"
