update interface login

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -120,6 +120,8 @@ en:
   role: "Role"
   gender: "Gender"
   birthday: "Birthday"
+  retype_password: "Retype password"
+  password: "Password"
   action: "Action"
   create: "Created"
   show: "Show"
@@ -139,3 +141,10 @@ en:
   you_do_not_have_access: "You do not have access !"
   you_are_not_manager: "you are not a manager should can not import !"
   file_format_not_right: "File format not right !"
+  login: "Login"
+  register_account: "Register Account"
+  register: "Register"
+  or: "or"
+  please: "Please"
+  reset_password: "Reset password"
+  forgot_password: "Forgot password"
