Refactor Import Timesheet confirm and setting cutoff date

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -71,10 +71,18 @@ en:
       update_setting: "Update setting"
       edit_setting: "Edit Setting"
       create_setting: "New Setting"
-
+    set_timesheets:
+      create:
+        company_not_found: "Company not found!"
+        you_must_setting_timesheet: "Please setting timesheets for import"
+        please_you_choose_file: "Please choose file to import!"
+        file_format_not_right: "File format not right!"
+        error_format_file: "Error format file! Please input file .csv,.xls,.xlsx"
+        import_success: "Import file has been successful."
     service:
       not_found_leave_type: "Leave type not found"
-  you_must_setting_timesheet: "Please setting timesheets for import"
+  confirm_import: "Are you sure want to import Timesheet this month?"
+  timesheets: "Timesheets"
   invalid_time_format: "Invalid format Time, please check your time setting"
   invalid_date_format: "invalid format Date, please check your date setting"
   create_success: "Create success!"
@@ -182,15 +190,11 @@ en:
   the_form_contains: "The form contains"
   error: "error"
   list_user: "List user"
-  import_success: "Imported successful."
   import: "Import"
   unknown_file: "Unknown file"
-  error_format_file: "Error format file! Please input file .csv,.xls,.xlsx"
-  please_you_choose_file: "Please you choose file!"
   slash: "/"
   you_do_not_have_access: "You do not have access !"
   you_are_not_manager: "you are not a manager should can not import !"
-  file_format_not_right: "File format not right !"
   login: "Login"
   register_account: "Register Account"
   register: "Register"
