--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,44 @@
 en:
   dashboard:
+    form_timesheet_setting:
+      workspace: "Workspace"
+      layout_type: "Layout type"
+      value_type: "Value type"
+      date_format_type: "Date format type"
+      start_date: "Start date"
+      end_date: "End date"
+      title_date: "Title date"
+      title_time_in: "Title time in"
+      title_time_out: "Title time out"
+      title_employee_code: "Title employee code"
+      title_name: "Title name"
+      col_date: "Col date"
+      col_time_in: "Col time in"
+      col_time_out: "Col time out"
+      col_employee_code: "Col employee code"
+      col_name: "Col name"
+      vertical: "vertical"
+      horizontal: "horizontal"
+      serial: "serial"
+      title: "title"
+      unique: "unique"
+      employee_code: "employee_code"
+      name: "name"
+    timesheet_settings:
+      create_successfully: "Create successfully"
+      update_successfully: "Update successfully"
+      delete_successfully: "Delete successfully"
+      delete_not_successfully: "Delete not successfully"
+      time_in_not_blank: "Time in not blank."
+      time_out_not_blank: "Time out not blank."
+      date_not_blank: "Date not blank."
+      employee_code_not_blank: "Employee code not blank."
+      name_not_blank: "Name not blank."
+      start_row_data_not_blank: "Start row data not blank."
+      edit_timesheet_settings: "Edit timesheet settings"
+      new_timesheet_settings: "New timesheet settings"
+      information_timesheet_settings: "Information timesheet settings"
+      list_timesheet_settings: "List timesheet settings"
     load_timesheet_success: "load timesheets success"
     users:
       index:
@@ -149,6 +188,7 @@ en:
   characters_minimum: "characters minimum"
   open_parenthesis: "("
   close_parenthesis: ")"
+  symbol_star: "*"
   edit: "Edit"
   update: "Update"
   currently_waiting_confirmation_for: "Currently waiting confirmation for:"
@@ -163,6 +203,7 @@ en:
     formats:
       default: "%m/%d/%Y"
       month_year: "%m/%Y"
+      date_month_year: "%d/%m/%y"
   forgot_your_password: "Forgot your password?"
   send_me_reset_password_instructions: "Send me reset password instructions"
   new_password: "New password"
@@ -242,4 +283,3 @@ en:
       example_kinds: "IL: in late morning; LE: leave early; LO: leave out; IL (A): in late afternoon"
       example_time: "Notice: 2.5h is the policy of leave just for women"
       example_compensation: "Ex: 16:45~17:45 23/11/2015"
-
