show_timesheet_with_month

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -1,5 +1,10 @@
 vi:
   dashboard:
+    leave: "LI/LO"
+    none: "None"
+    holiday: "Holiday"
+    sat: "Saturday"
+    sun: "Sunday"
     load_timesheet_success: "Tải thành công dữ liệu TimeSheet"
     users:
       index:
