--- a/config/locales/request_leaves.en.yml
+++ b/config/locales/request_leaves.en.yml
@@ -3,18 +3,26 @@ en:
     request_leaves:
       index:
         list_request_leave: "List requests leave"
+        no_reqquest_leave_display: "No request leave displayed!"
         no_num: "Index"
         created_at: "Created at"
         leave_from: "Leave from"
         leave_to: "To"
         reason: "Reason"
         compensation: "Register for compensation"
+        staff_name: "Staff name"
         kind_of_leave: "Kind of leave"
         time: "Time"
         status: "Status"
         action: "Action"
         are_you_sure: "Are you sure?"
+        search: "Search"
+        create_from: "Create from..."
+        create_to: "To..."
+        choose_leave_type: "Choose leave type"
+        choose_status: "Choose status"
       request_leave:
         tooltip_approve: "approve"
         tooltip_reject: "reject"
         time_unit: "m"
+
