--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -57,6 +57,17 @@ en:
       update_failure: "Failed"
       not_setting_message: "Have not setting!"
 
+    request_offs:
+      index:
+        title: "Request off"
+        index: "Index"
+        time_off_from: "Time off from"
+        time_off_to: "Time off to"
+        reason: "reason"
+        status: "status"
+      status:
+        change : "change"
+
     company_setting:
       cutoff_date: "Cutoff Date"
       company: "Company Setting"
