--- a/config/locales/request_offs.en.yml
+++ b/config/locales/request_offs.en.yml
@@ -1,16 +1,27 @@
 en:
-  request_offs:
-    index:
-      title: List Request Offs
-      index: Index
-      time_off_from: Time off from
-      time_off_from: Time off to
-      reason: Reason
-      edit_request_off: Edit
-      delete_request_off: Delete
-      action: "Action"
-    new:
-      personal:
-        title: Request leave of absent (Personal Offs)
-        require: I would like to submit this form to be approved of my leave of
-          adsence (off with no salary)
+  dashboard:
+    request_offs:
+      index:
+        title: List Request Offs
+        index: Index
+        time_off_from: Time off from
+        time_off_from: Time off to
+        reason: Reason
+        edit_request_off: Edit
+        delete_request_off: Delete
+        action: "Action"
+        staff_name: "Staff name"
+        no_request_off_displayed: "No request offs displayed!"
+        choose_status: "Choose status"
+        create_from: "Create from"
+        create_to: "To"
+        search: "Search"
+      request_off:
+        empty: "empty"
+        status:
+          change: "Change"
+      new:
+        personal:
+          title: Request leave of absent (Personal Offs)
+          require: I would like to submit this form to be approved of my leave of
+            adsence (off with no salary)
