--- a/config/locales/request_offs.en.yml
+++ b/config/locales/request_offs.en.yml
@@ -20,8 +20,26 @@ en:
         empty: "empty"
         status:
           change: "Change"
-      new:
-        personal:
-          title: Request leave of absent (Personal Offs)
-          require: I would like to submit this form to be approved of my leave of
-            adsence (off with no salary)
+  request_offs:
+    index:
+      title: List Request Offs
+      index: Index
+      created_at: Created at
+      time_off_from: Time off from
+      time_off_from: Time off to
+      reason: Reason
+      edit_request_off: Edit
+      delete_request_off: Delete
+      status: "Status"
+      action: "Action"
+      no_request_off_displayed: "No request offs displayed!"
+    request_off:
+      empty: "empty"
+      tooltip_edit: "edit"
+      tooltip_cancel: "cancel"
+      are_you_sure: "Are you sure cancel this request off?"
+    new:
+      personal:
+        title: Request leave of absent (Personal Offs)
+        require: I would like to submit this form to be approved of my leave of
+          adsence (off with no salary)
