--- a/config/locales/request_leaves.vi.yml
+++ b/config/locales/request_leaves.vi.yml
@@ -26,3 +26,29 @@ vi:
         time_unit: "p"
       status:
         change: "thay đổi"
+
+  request_leaves:
+      index:
+        list_request_leave: "Danh sách yêu cầu IL (M), LE, LO, IL (A)"
+        no_reqquest_leave_display: "Không có yêu cầu nào được hiển thị!"
+        no_num: "STT"
+        created_at: "Thời gian tạo"
+        leave_from: "Từ"
+        leave_to: "Đến"
+        reason: "Lý do"
+        compensation: "Đăng ký làm bù"
+        staff_name: "Tên nhân viên"
+        kind_of_leave: "Loại"
+        time: "Thời gian"
+        status: "Trạng thái"
+        action: "Hành động"
+        search: "Tìm kiếm"
+        created_from: "Ngày tạo từ..."
+        create_to: "Đến..."
+        choose_leave_type: "Chọn IL, LE, LO..."
+        choose_status: "Chọn trạng thái"
+      request_leave:
+        tooltip_edit: "Sửa"
+        tooltip_cancel: "Hủy"
+        are_you_sure: "Bạn chắc chắn muốn hủy yêu cầu này?"
+        time_unit: "p"
