fix bug of user's workspace

--- a/config/locales/personal_issues.en.yml
+++ b/config/locales/personal_issues.en.yml
@@ -10,3 +10,6 @@ en:
         status: "status"
       status:
         change : "change"
+  personal_issues:
+    index:
+      title: "Personal Issues"
