Show remaining times user_leaves of user

--- a/config/locales/request_leaves.en.yml
+++ b/config/locales/request_leaves.en.yml
@@ -48,6 +48,7 @@ en:
         create_to: "To..."
         choose_leave_type: "Choose leave type"
         choose_status: "Choose status"
+        you_have_time_request: "You have %{remain} times for request leaves"
       request_leave:
         tooltip_edit: "edit"
         tooltip_cancel: "cancel"
